# generic-rag-framework

./: .env.example  .gitignore  README.md  app.py  evaluate.bat  install.bat  pyproject.toml  requirements.txt  run.bat  smoke_test.py
data/mars/: dataset.json  qa_dataset.json
data/mars/documents/: 01_early_mars_missions.md  02_spirit_opportunity.md  03_curiosity_rover.md  04_perseverance_ingenuity.md  05_phoenix_insight.md  06_mars_orbiters.md  07_esa_exomars.md  08_future_missions.md
data/quantum/: dataset.json  qa_dataset.json
data/quantum/documents/: 01_foundations_of_quantum_computing.md  02_quantum_hardware_platforms.md  03_quantum_algorithms_and_applications.md  04_quantum_error_correction_and_fault_tolerance.md  05_quantum_cryptography_and_security.md  06_quantum_software_and_programming.md  07_quantum_sensing_and_metrology.md  08_quantum_materials_and_chemistry_simulations.md
evaluation/: __init__.py  metrics.py  qualitative.py  retrieval_eval.py  run_evaluation.py
results/: .gitkeep
src/: __init__.py  config.py  document_loader.py  embeddings.py  generator.py  rag_pipeline.py  retriever.py  vector_store.py
src/providers/: __init__.py  base.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
